@@ -22,12 +22,6 @@ DISTRIBUTION
 
 NOTE:
 
-Links to the documentation must be site-absolute, eg
-
-    href="/doc/v2.1/Documentation/out-www"
-
-until someone fixes this.  The documentation is also on lilypond.org,
-but not part of the website proper.  It is built from the lilypond
-source package by running `make web'.
-
+    images live in @IMAGES@
+    doc lives in @DOC@
 
