@@ -340,7 +340,7 @@ practical for real use. >
 <h3>How do I learn the syntax?</h3>
 <p>
 Take a look at the
-<a href="/doc/v1.8/Documentation/user/out-www/lilypond/lilypond.html#Tutorial">tutorial</a>.
+<a href="@DOC@v1.8/Documentation/user/out-www/lilypond/lilypond.html#Tutorial">tutorial</a>.
 It is pretty short, chopped in easily digestible chunks,
 and we've spent a lot of time polishing it.
 If you like to learn by fiddling around, then you can get input
