@@ -1,3 +1,7 @@
+2004-03-14  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* format-page.py (do_one_file): Handle @DOC@, change all HTML sources.
+
 2004-03-14  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
 	* site/download/index.html: add gentoo link.
